# distillo

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: example-anthropic.yaml  example-deepseek.yaml  example-on-policy.yaml  example-openai.yaml  example-rl-training.yaml  example-vllm.yaml  example-zai.yaml
distillo/: __init__.py  cli.py  client.py  config.py
docs/: BEGINNERS_GUIDE.md
server/: __init__.py  app.py  backends.py  executor.py  sources.py  uploader.py  writers.py
server/training/: __init__.py  importance_sampling.py  kl_divergence.py  on_policy_trainer.py  ppo.py
